Justified text alignment fixed.

--- a/static/css/committee.css
+++ b/static/css/committee.css
@@ -64,7 +64,7 @@ body {
 		height: auto;
 		overflow: auto;
 		position: relative;
-		text-align: center;
+		text-align: justify;
 		font-size: medium;
 	}
 
